<resources>
    <string name="app_name">LoyaltyGlobal</string>
    <string name="enter_mobile">Mobile Number</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_create_now">Not a member yet? </string>
    <string name="already_have_account">Already have an account? </string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="category">TOP CATEGORIES</string>
    <string name="orders">Orders</string>
    <string name="Rs">\u20B9</string>
    <string name="view_all">VIEW ALL</string>
    <string name="hot_products">HOT PRODUCTS</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Name</string>
    <string name="enter_email">Email</string>
    <string name="referral_code">Referral Code</string>
    <string name="sign_in">Sign In</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="confirm_password_not_match">Confirm password not match</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="invalid_email_or_password">Invalid username or password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="permission_denied_by_system">Permission denied by system</string>
    <string name="permission_denied">Permission denied</string>
    <string name="map_api_key">AIzaSyDsdYfi3HeW6yXw-LRY_2CVOGgNMQxbobA</string>

    <string name="see_more">See more</string>
    <string name="see_less">See less</string>

    <!--Explore [start]-->
    <string name="explore_businesses">Businesses</string>
    <string name="explore_deals_and_offers"><![CDATA[Deals & Offers]]></string>
    <string name="businesses_will_be_updated_soon">Businesses will be updated soon!</string>
    <string name="no_deal_available">No Deal Available</string>
    <string name="many_exciting_deals_will_soon_be_available">Many exciting deals will soon be available.</string>
    <string name="explore">Explore</string>
    <!--Explore [end]-->

    <!-- [START] HomeScreen-->
    <string name="home_screen_need_for_next_level">needed for next level</string>
    <string name="discover_these_featured_deals_and_games">Discover these featured deals and games</string>
    <string name="featured_deals_promotions">Featured Deals &amp; Promotions</string>
    <string name="my_deals_offers">My Deals &amp; Offers</string>
    <string name="brand_name">Brand Name</string>
    <string name="see_all">See All</string>
    <!-- [START] TODO: DUMMY DATA Remove after come from server -->

    <string name="stories">Stories</string>
    <!-- [START] TODO: DUMMY DATA Remove after come from server -->
    <string name="home_screen_need_for_next_level_points">%d pt</string>
    <string name="home_screen_total_points">%d pt</string>
    <string name="home_screen_day_expiration">%d days to expiration</string>
    <string name="get_10_entire_menu">Get 10% entire menu</string>
    <string name="Versace">Versace</string>
    <string name="baskin_robins">Baskin Robins</string>
    <string name="cluccboi">Cluccboi</string>
    <string name="american_style_cluccin_good">American-style Cluccin\' Good™ Fried Chicken! Delivered straight to your door from any of the leading food delivery apps - find us on Uber Eats</string>
    <string name="shop_3_g7_capri_on_via_roma">Shop 3 G7, Capri on Via Roma Gold Coast, QLD, Australia 4217</string>
    <string name="_1800_646_990">(1800) 646–990</string>
    <string name="dummy_email">info@shadowchef.co</string>
    <string name="dummy_link">http://www.shadowchef.co/cluccboi</string>
    <string name="cluccboi_co">cluccboi.co</string>
    <string name="earn_points_on_your_purchases">Earn Points on your purchases</string>
    <string name="discounts">Discounts</string>
    <string name="these_discounts_will_apply">These discounts will apply on your purchase.</string>
    <string name="monday">Monday</string>
    <string name="_20_off">20% OFF</string>

    <!-- [END] TODO: DUMMY DATA Remove after come from server -->
    <!-- [END] HomeScreen-->
    <string name="no_internet_available">No Internet available</string>

    <string name="enter_your_verification_code">Enter your \nverification code</string>
    <string name="i_didn_t_my_code"><u>I didn\'t my code!</u></string>
    <string name="hi_what_s_your_name">Hi! \nWhat\'s Your Name?</string>
    <string name="your_name">Your Name</string>
    <string name="hey_user_enter_your_phone_number">Hey %s, \nEnter your Phone Number</string>
    <string name="when_are_you_born_with_name">When are you born, \n%s</string>
    <string name="when_are_you_born">When are you born</string>
    <string name="search">Search</string>


    <!-- [START] HomeScreen-->
    <string name="home_screen_title">Walletly</string>
    <!-- [END] HomeScreen-->
    <string name="walletly">Walletly</string>
    <string name="walletly_global">Walletly Global</string>
    <string name="email">Email Address</string>
    <string name="hi_there_let_s_get_started">Hi there! Let’s \nGet Started</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="_41">+41</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="please_select_country_code">Please select country code</string>
    <string name="next">Next</string>
    <string name="fast_food">Fast Food</string>
    <string name="earn_point">Earn Point</string>
    <string name="_2_point">2 Point</string>
    <string name="per_visit">/per visit</string>


    <string name="scan_qr_code">Scan QR Code</string>
    <string name="membership_code">Membership Code</string>
    <string name="ca259b7c">CA259B7C</string>
    <string name="copy">Copy</string>
    <string name="invalid_mobile_number_length">Mobile number length should be %d </string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="bottom_navigation_user">User</string>
    <string name="notification">Notification</string>
    <string name="no_notification">No Notification</string>
    <string name="filters">Filters</string>
    <string name="business_type">Business Type</string>
    <string name="clear_all">Clear all</string>
    <string name="apply">Apply</string>
    <string name="dummy_name">Jhon Doe</string>
    <string name="edit">Edit</string>
    <string name="transactions">Transactions</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log Out</string>
    <string name="keep_track_your_transactions">Keep track your transactions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="error">Error</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="get_updates_on_your_loyalty_points_and_more_through_push_notification">Get updates on your loyalty points(and more) through push notification.</string>
    <string name="ok">OK</string>
    <string name="ssl_certificate_error">SSL Certificate Error</string>
    <string name="certificate_authority_error">The certificate authority is not trusted</string>
    <string name="no_stories_available">No Stories Available</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="num_offer">%s\%% OFF</string>
    <string name="some_point">%d Point</string>
    <string name="about">About</string>
    <string name="other_links">Other Links</string>
    <string name="visit_link">Visit link</string>

    <plurals name="some_point">
        <item quantity="one">%d Point</item>
        <item quantity="two">%d Points</item>
        <item quantity="other">%d Points</item>
    </plurals>
    <string name="text_with_underline"><u>%s</u></string>
    <string name="search_brand">Search Brand</string>
    <string name="no_search_brands_found">No search brands found</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="display_name">Display Name</string>
    <string name="email_address">Email Address</string>
    <string name="dob">DOB</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="so_that_we_can_send_you_specials">So that we can send you specials</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
</resources>
