<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fragmentClickable"
    tools:context=".ui.main.view.fragment.ProfileFragment"
    tools:ignore="UnusedAttribute">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/poppinsBold24Heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_16"
        android:background="?main_divider"
        android:elevation="@dimen/dp_1"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/dp_72"
        android:layout_height="@dimen/dp_72"
        android:layout_marginTop="@dimen/dp_16"
        android:src="@drawable/ic_user_place_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_name"
        style="@style/poppinsBold22Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        tools:text="@string/dummy_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_email"
        style="@style/poppinsNormal13Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        app:layout_constraintEnd_toEndOf="@+id/txt_name"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        tools:text="johndoe@gmail.com" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit"
        style="@style/poppinsNormal13Heading"
        android:layout_width="@dimen/dp_86"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/grey_border_4"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/round_ripple_4"
        android:text="@string/edit"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:src="@drawable/ic_logout"
        app:tint="?heading"
        app:layout_constraintBottom_toBottomOf="@+id/ll_transaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_transaction" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_transaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_34"
        android:background="@drawable/round_ripple_4"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_transaction"
            style="@style/poppinsNormal16Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactions" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_transaction_desc"
            style="@style/poppinsNormal12Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/keep_track_your_transactions"
            app:layout_constraintStart_toStartOf="@+id/txt_transaction"
            app:layout_constraintTop_toBottomOf="@+id/txt_transaction" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <View
        android:id="@+id/view_line_1"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:background="?main_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_transaction"
        app:layout_constraintTop_toBottomOf="@+id/ll_transaction" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:src="@drawable/ic_moon"
        app:tint="?heading"
        app:layout_constraintBottom_toBottomOf="@+id/txt_dark_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_dark_mode" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_dark_mode"
        style="@style/poppinsNormal16Heading"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_24"
        android:text="@string/dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_dark_mode"
        app:layout_constraintTop_toBottomOf="@+id/view_line_1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_22"
        app:layout_constraintBottom_toTopOf="@+id/view_line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_line_1"
        app:thumbTint="@color/thumb_gray"
        app:trackTint="@color/track_gray" />

    <View
        android:id="@+id/view_line_2"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:background="?main_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_dark_mode"
        app:layout_constraintTop_toBottomOf="@+id/txt_dark_mode" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:src="@drawable/ic_logout"
        app:tint="?heading"
        app:layout_constraintBottom_toBottomOf="@+id/txt_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_logout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_logout"
        style="@style/poppinsNormal16Heading"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_56"
        android:paddingVertical="@dimen/dp_24"
        android:text="@string/log_out"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/round_ripple_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_line_2" />

    <View
        android:id="@+id/view_line_3"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:background="?main_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_logout"
        app:layout_constraintTop_toBottomOf="@+id/txt_logout" />

</androidx.constraintlayout.widget.ConstraintLayout>
